--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/RegistrationDetails.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/RegistrationDetails.cshtml
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
-    <link rel="stylesheet" href="~/css/AdminDashboard_style.css">
+    <link rel="stylesheet" href="~/css/AdminRegistrationDetails_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -53,7 +53,7 @@
     <div class="main-content">
         <!-- Header -->
         <div class="header">
-            <h1>Admin Dashboard</h1>
+            <h1>Registration Details</h1>
             <div class="user-info">
                 <div class="profile-pic">
                     <img id="admin-profile" src="~/images/profile.png" alt="Admin Profile">
