--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/AdvisorDetails.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Admin/AdvisorDetails.cshtml
@@ -38,7 +38,7 @@
         </div>
         <div class="bottom-links">
             <li class="bottom-items">
-                <a href="#"><i class="fas fa-cog"></i><span>Settings</span></a>
+                <a href="@Url.Action("AdminNotification", "Admin")"><i class="fas fa-bell"></i><span>Notifications</span></a>
             </li>
             <li class="bottom-items">
                 <a href="#"><i class="fas fa-question-circle"></i><span>Help</span></a>
