--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Student/RegisteredCourse.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Student/RegisteredCourse.cshtml
@@ -40,6 +40,9 @@
 
                 <div class="bottom-links">
                     <li class="bottom-items">
+                        <a href="@Url.Action("StudentNotification", "Student")"><i class="fas fa-bell"></i><span>Notifications</span></a>
+                    </li>
+                    <li class="bottom-items">
                         <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
                     </li>
                 </div>
