--- a/FOE_CourseRegistrationSystem/Views/Dashboard/Advisor/AdviserDashboard.cshtml
+++ b/FOE_CourseRegistrationSystem/Views/Dashboard/Advisor/AdviserDashboard.cshtml
@@ -30,10 +30,7 @@
         </div>
     <div class="bottom-links">
         <li class="bottom-items">
-            <a href="#"><i class="fas fa-cog"></i><span>Settings</span></a>
-        </li>
-        <li class="bottom-items">
-            <a href="#"><i class="fas fa-question-circle"></i><span>Help</span></a>
+            <a href="@Url.Action("AdvisorNotification", "Advisor")"><i class="fas fa-bell"></i><span>Notifications</span></a>
         </li>
         <li class="bottom-items">
             <a href="~/Account/Login"><i class="fas fa-sign-out-alt"></i><span>Log out</span></a>
